<resources>
    <string name="app_name">Nutrify</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_recommendation">Recommendation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan">Scan</string>

    <string name="username">Hello Bambang,</string>
    <string name="welcome_greeting">Hello %s,</string>
    <string name="calories_today">Your calories today</string>
    <string name="calories_kkal">kkal</string>
    <string name="calories_total">1965</string>
    <string name="today_statistic">Today statistic</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_in_with_gmail">Sign in with gmail account</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_with_gmail">Sign up with gmail account</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>

    <string name="birth_date">Birth date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="weight">%d kg</string>
    <string name="height">%d cm</string>
    <string name="edit_language">Language</string>
    <string name="health_tips">“Reduce intake of harmful fats”</string>
    <string name="rec_food_name">Fresh Tomato</string>
    <string name="rec_food_type">Vegetable</string>

    <string name="btn_save">Save</string>
    <string name="input_full_name">Full Name</string>
    <string name="input_username">Username</string>
    <string name="input_height">Height</string>
    <string name="input_weight">Weight</string>
    <string name="input_new_password">New Password</string>
    <string name="input_birth_date">YYYY-MM-DD</string>
    <string name="genders">Gender</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string name="calories_per_day">Calories per day</string>
    <string name="consuming_per_month">Most kind of food consuming per month</string>
    <string name="month_year">MEI 2021</string>
    <string name="week1">week 1</string>
    <string name="english">English</string>
    <string name="textview">textView</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign out</string>
    <string name="recommendation_for_you">Recommendation for you</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register success</string>
    <string name="email_not_valid">invalid email</string>
    <string name="password_not_valid">Password less than 6 characters!</string>
    <string name="password_not_same">Passwords are not the same!</string>
    <string name="name_not_valid">name cannot be empty</string>
    <string name="confirm_sign_out">Are you sure to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="height_input">Height (cm)</string>
    <string name="weight_input">Weight (kg)</string>
    <string name="field_not_valid">field cannot empty</string>
    <string name="gender_not_valid">Choose your gender</string>
    <string name="date_not_valid">Choose your birth date</string>
    <string name="user_update_success">Update success</string>
    <string name="health_tips_title">Health tips</string>
    <string name="week_button">%s - %s</string>
    <string name="total_calories">%d kkal</string>
    <string name="not_found">Data not found</string>
    <string name="budget">Budget</string>
    <string name="total_calories_budget">0</string>
    <string name="remaining">Remaining</string>

    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
</resources>