<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_stats"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_capture"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_recommendation"
        android:icon="@drawable/ic_recommendation"
        android:title="@string/title_recommendation" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>