<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yusril.nutrify.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.yusril.nutrify.ui.statistic.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

<<<<<<< HEAD
    <activity
        android:id="@+id/navigation_scan"
        android:name="com.yusril.nutrify.ui.scan.ScanActivity"
        android:label="@string/title_scan"
        tools:layout="@layout/activity_scan" />
=======
<!--    <activity-->
<!--        android:id="@+id/navigation_scan"-->
<!--        android:name="com.yusril.nutrify.ui.scan.ScanActivity"-->
<!--        android:label="@string/title_scan"-->
<!--        tools:layout="@layout/activity_scan" />-->
>>>>>>> 14159c234cee8116553fee06329d7378eb62fe8f

    <fragment
        android:id="@+id/navigation_recommendation"
        android:name="com.yusril.nutrify.ui.recommendation.RecommendationFragment"
        android:label="@string/title_recommendation"
        tools:layout="@layout/fragment_recommendation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yusril.nutrify.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>