<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/shape_rectangle_bg_recommendation">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_rec_food_img"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/app_name" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_rec_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/rec_food_name"
        android:textColor="@color/green_500"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_rec_food_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/rec_food_type"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_rec_food_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_rec_food_name" />

    <TextView
        android:id="@+id/tv_rec_food_kkal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/calories_kkal"
        android:textColor="#2F2F2F"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/tv_rec_food_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_rec_food_type" />
</androidx.constraintlayout.widget.ConstraintLayout>